feat: Make DynamiList more generic so it can works with UUID and Strins as a code (FPLA-2604) (#2212)